--- a/LITrevu/requirements.txt
+++ b/LITrevu/requirements.txt
@@ -1,13 +1,23 @@
 asgiref==3.8.1
 beautifulsoup4==4.12.3
+black==24.10.0
 bs4==0.0.2
 certifi==2023.11.17
 charset-normalizer==3.3.2
+click==8.1.7
 Django==5.1.1
 django-browser-reload==1.16.0
+flake8==7.1.1
 fpdf==1.7.2
 idna==3.6
+mccabe==0.7.0
+mypy-extensions==1.0.0
+packaging==24.2
+pathspec==0.12.1
 pillow==11.0.0
+platformdirs==4.3.6
+pycodestyle==2.12.1
+pyflakes==3.2.0
 requests==2.31.0
 soupsieve==2.5
 sqlparse==0.5.1
